Nginx configuration generator

--- a/config_factory/templates/nginx_proxy.conf
+++ b/config_factory/templates/nginx_proxy.conf
@@ -2,8 +2,8 @@ server {
         listen       [::]:88;
         server_name  {{ domains }};
 
-        access_log  off;
-        error_log off;
+        access_log {{ access_log }};
+        error_log  {{ error_log }};
 
         # proxy to Apache 2 and mod_python
         location / {
