--- a/wsgiadmin/requests/templates/bind_primary.conf
+++ b/wsgiadmin/requests/templates/bind_primary.conf
@@ -1,3 +1,4 @@
+{% for domain in domains %}
 zone "{{ domain.name }}" IN {
         type master;
         file "pri_auto/{{ domain.name }}.zone";
@@ -5,3 +6,4 @@ zone "{{ domain.name }}" IN {
         allow-transfer { {{ dns.slave }}; };
         notify yes;
 };
+{% endfor %}
