--- a/wsgiadmin/requests/templates/bind_secondary.conf
+++ b/wsgiadmin/requests/templates/bind_secondary.conf
@@ -1,6 +1,8 @@
+{% for domain in domains %}
 zone "{{ domain.name }}" IN {
         type slave;
         file "sec_auto/{{ domain.name }}.zone";
         allow-query { any; };
         masters { {{ dns.master }}; };
 };
+{% endfor %}
