--- a/wsgiadmin/requests/templates/bind_zone.conf
+++ b/wsgiadmin/requests/templates/bind_zone.conf
@@ -8,6 +8,6 @@ $TTL 600s
 @       IN              NS      {{ dns.ns1 }}.
 @       IN              NS      {{ dns.ns2 }}.
 @       IN              MX 10   {{ dns.mx }}.
-@       IN              A       {{ domain.owner.parms.machine.ip }}
-@       IN              AAAA    {{ domain.owner.parms.machine.ipv6 }}
+@       IN              A       {{ domain.owner.parms.web_machine.ip }}
+@       IN              AAAA    {{ domain.owner.parms.web_machine.ipv6 }}
 *       IN              CNAME   @
