code cleanup, optional log dir

--- a/wsgiadmin/requests/templates/apache_vhost_php.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_php.conf
@@ -3,8 +3,8 @@
         ServerName {{ site.serverName }}
         {% if site.serverAlias %}ServerAlias {{ site.serverAlias }}{% endif %}
         DocumentRoot {{ site.documentRoot }}
-        CustomLog /var/log/webs/access_{{ site.serverName }}.log combined
-        ErrorLog /var/log/webs/error_{{ site.serverName }}.log
+        CustomLog {{ log_dir }}access_{{ site.serverName }}.log combined
+        ErrorLog {{ log_dir }}error_{{ site.serverName }}.log
         <Directory {{ site.documentRoot }}>
                 Options +ExecCGI +Indexes
                 AllowOverride All
