--- a/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
         ServerName {{ site.serverName }}
         {% if site.serverAlias %}ServerAlias {{ site.serverAlias }}{% endif %}
-        CustomLog /var/log/webs/access_{{ site.serverName }}.log combined
-        ErrorLog /var/log/webs/error_{{ site.serverName }}.log
+        CustomLog {{ log_dir }}access_{{ site.serverName }}.log combined
+        ErrorLog {{ log_dir }}error_{{ site.serverName }}.log
 
         {% if site.type == "uwsgi" %}
         <Location />
