--- a/wsgiadmin/requests/templates/nginx_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_wsgi.conf
@@ -2,8 +2,8 @@ server {
         listen       [::]:88;
         server_name  {{ site.domains }};
 
-        access_log /var/log/nginx/access_{{ site.serverName }}.log;
-        error_log /var/log/nginx/error_{{ site.serverName }}.log;
+        access_log {{ log_dir }}access_{{ site.serverName }}.log;
+        error_log {{ log_dir }}error_{{ site.serverName }}.log;
 
         location / {
                 uwsgi_pass unix://{{ site.socket }};
