statics generating fix

--- a/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
@@ -15,7 +15,7 @@
         WSGIScriptAlias / {{ site.script }}
         {% endif %}
 
-        {% for static in site.staticList %}
+        {% for static in site.static_list %}
         Alias "{{ static.url }}"     "{{ static.dir }}/"
         <Directory "{{ static.dir }}">
                 Order deny,allow
