--- a/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
@@ -26,7 +26,7 @@ server {
                 proxy_busy_buffers_size    64k;
                 proxy_temp_file_write_size 64k;
         }
-        {% for static in site.staticList %}
+        {% for static in site.static_list %}
         location {{ static.url }} {
                 alias {{ static.dir }};
         }
