--- a/wsgiadmin/requests/templates/nginx_vhost_static.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_static.conf
@@ -5,7 +5,7 @@ server {
         access_log {{ log_dir }}access_{{ site.serverName }}.log;
         error_log {{ log_dir }}error_{{ site.serverName }}.log;
 
-		{% for static in site.staticList %}
+		{% for static in site.static_list %}
         location / {
                 alias {{ site.documentRoot }};
         }
