--- a/wsgiadmin/requests/templates/nginx_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_wsgi.conf
@@ -10,7 +10,7 @@ server {
                 include        uwsgi_params;
         }
 
-		{% for static in site.staticList %}
+		{% for static in site.static_list %}
         location {{ static.url }} {
                 alias {{ static.dir }};
         }
