allow into template

--- a/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
@@ -6,6 +6,7 @@
 
         {% if site.type == "uwsgi" %}
         <Location />
+                Allow From All
                 SetHandler uwsgi-handler
                 uWSGISocket {{ site.socket }}
         </Location>
