--- a/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
@@ -17,7 +17,7 @@
         {% endif %}
 
         {% for static in site.static_list %}
-        Alias "{{ static.url }}"     "{{ static.dir }}/"
+        Alias "{{ static.url }}" "{{ static.dir }}"
         <Directory "{{ static.dir }}">
                 Order deny,allow
                 Allow from all
