--- a/wsgiadmin/requests/templates/apache_vhost_static.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_static.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
-        ServerName {{ site.serverName }}
+        ServerName {{ site.server_name }}
         {% if site.serverAlias %}ServerAlias {{ site.serverAlias }}{% endif %}
         DocumentRoot {{ site.documentRoot }}
-        CustomLog {{ log_dir }}access_{{ site.serverName }}.log combined
-        ErrorLog {{ log_dir }}error_{{ site.serverName }}.log
+        CustomLog {{ log_dir }}access_{{ site.server_name }}.log combined
+        ErrorLog {{ log_dir }}error_{{ site.server_name }}.log
         <Directory {{ site.documentRoot }}>
                 Options +Indexes
                 AllowOverride All
