--- a/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
-        ServerName {{ site.serverName }}
+        ServerName {{ site.server_name }}
         {% if site.serverAlias %}ServerAlias {{ site.serverAlias }}{% endif %}
-        CustomLog {{ log_dir }}access_{{ site.serverName }}.log combined
-        ErrorLog {{ log_dir }}error_{{ site.serverName }}.log
+        CustomLog {{ log_dir }}access_{{ site.server_name }}.log combined
+        ErrorLog {{ log_dir }}error_{{ site.server_name }}.log
 
         {% if site.type == "uwsgi" %}
         <Location />
@@ -11,8 +11,8 @@
                 uWSGISocket {{ site.socket }}
         </Location>
         {% else %}
-        WSGIDaemonProcess {{ site.serverNameSlugged }} user={{ site.owner.username }} group={{ site.owner.username }} processes={{ site.processes }} threads={{ site.threads }}
-        WSGIProcessGroup {{ site.serverNameSlugged }}
+        WSGIDaemonProcess {{ site.server_name|slugify }} user={{ site.owner.username }} group={{ site.owner.username }} processes={{ site.processes }} threads={{ site.threads }}
+        WSGIProcessGroup {{ site.server_name|slugify }}
         WSGIScriptAlias / {{ site.script }}
         {% endif %}
 
