--- a/wsgiadmin/requests/templates/nginx_vhost_static.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_static.conf
@@ -2,10 +2,10 @@ server {
         listen       [::]:88;
         server_name  {{ site.domains }};
 
-        access_log {{ log_dir }}access_{{ site.serverName }}.log;
-        error_log {{ log_dir }}error_{{ site.serverName }}.log;
+        access_log {{ log_dir }}access_{{ site.server_name }}.log;
+        error_log {{ log_dir }}error_{{ site.server_name }}.log;
 
-		{% for static in site.static_list %}
+        {% for static in site.static_list %}
         location / {
                 alias {{ site.documentRoot }};
         }
