--- a/wsgiadmin/requests/templates/apache_vhost_php.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_php.conf
@@ -1,10 +1,10 @@
 <VirtualHost *:80>
         SuexecUserGroup {{ site.owner.username }} {{ site.owner.username }}
-        ServerName {{ site.serverName }}
+        ServerName {{ site.server_name }}
         {% if site.serverAlias %}ServerAlias {{ site.serverAlias }}{% endif %}
         DocumentRoot {{ site.documentRoot }}
-        CustomLog {{ log_dir }}access_{{ site.serverName }}.log combined
-        ErrorLog {{ log_dir }}error_{{ site.serverName }}.log
+        CustomLog {{ log_dir }}access_{{ site.server_name }}.log combined
+        ErrorLog {{ log_dir }}error_{{ site.server_name }}.log
         <Directory {{ site.documentRoot }}>
                 Options +ExecCGI +Indexes
                 AllowOverride All
