Config moved to django-constance

--- a/wsgiadmin/requests/templates/bind_secondary.conf
+++ b/wsgiadmin/requests/templates/bind_secondary.conf
@@ -3,6 +3,6 @@ zone "{{ domain.name }}" IN {
         type slave;
         file "sec_auto/{{ domain.name }}.zone";
         allow-query { any; };
-        masters { {{ dns.master }}; };
+        masters { {% config.dns_master %}; };
 };
 {% endfor %}
