--- a/wsgiadmin/requests/templates/bind_zone.conf
+++ b/wsgiadmin/requests/templates/bind_zone.conf
@@ -1,13 +1,13 @@
 $TTL 600s
-@       IN      SOA     {{ dns.ns1 }}. {{ dns.email }}.  (
+@       IN      SOA     {% config.dns_ns1 %}. {% config.dns_email %}.  (
                                         {{ domain.serial }}
-                                        {{ dns.Refresh }}
-                                        {{ dns.Retry }}
-                                        {{ dns.Expire }}
-                                        {{ dns.Minimum }} )
-@       IN              NS      {{ dns.ns1 }}.
-@       IN              NS      {{ dns.ns2 }}.
-@       IN              MX 10   {{ dns.mx }}.
+                                        {% config.dns_Refresh %}
+                                        {% config.dns_Retry %}
+                                        {% config.dns_Expire %}
+                                        {% config.dns_Minimum %} )
+@       IN              NS      {% config.dns_ns1 %}.
+@       IN              NS      {% config.dns_ns2 %}.
+@       IN              MX 10   {% config.dns_mx %}.
 @       IN              A       {{ domain.owner.parms.web_machine.ip }}
 @       IN              AAAA    {{ domain.owner.parms.web_machine.ipv6 }}
 *       IN              CNAME   @
