ignore local.py in test projects

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ dist/
 build/
 wsgiadmin/settings/local.py
 wsgiadmin/settings/prod.py
+integrate_project/settings/local.py
+unit_project/settings/local.py
