Fix for Issue #4 - AAAA record even if IPv6 is disabled

--- a/wsgiadmin/requests/templates/bind_zone.conf
+++ b/wsgiadmin/requests/templates/bind_zone.conf
@@ -9,5 +9,5 @@ $TTL 600s
 @       IN              NS      {% config.dns_ns2 %}.
 @       IN              MX 10   {% config.dns_mx %}.
 @       IN              A       {{ domain.owner.parms.web_machine.ip }}
-@       IN              AAAA    {{ domain.owner.parms.web_machine.ipv6 }}
+{% if config.ipv6 %}@       IN              AAAA    {{ domain.owner.parms.web_machine.ipv6 }}{% else %}; No AAAA{% endif %}
 *       IN              CNAME   @
