bind config temaplates fixed

--- a/wsgiadmin/requests/templates/bind_primary.conf
+++ b/wsgiadmin/requests/templates/bind_primary.conf
@@ -3,7 +3,7 @@ zone "{{ domain.name }}" IN {
         type master;
         file "pri_auto/{{ domain.name }}.zone";
         allow-query { any; };
-        allow-transfer { {% config.dns_slave %}; };
+        allow-transfer { {{ config.dns_slave }}; };
         notify yes;
 };
 {% endfor %}
