--- a/wsgiadmin/requests/templates/bind_zone.conf
+++ b/wsgiadmin/requests/templates/bind_zone.conf
@@ -1,13 +1,13 @@
 $TTL 600s
-@       IN      SOA     {% config.dns_ns1 %}. {% config.dns_email %}.  (
+@       IN      SOA     {{ config.dns_ns1 }}. {{ config.dns_email }}.  (
                                         {{ domain.serial }}
-                                        {% config.dns_Refresh %}
-                                        {% config.dns_Retry %}
-                                        {% config.dns_Expire %}
-                                        {% config.dns_Minimum %} )
-@       IN              NS      {% config.dns_ns1 %}.
-@       IN              NS      {% config.dns_ns2 %}.
-@       IN              MX 10   {% config.dns_mx %}.
+                                        {{ config.dns_Refresh }}
+                                        {{ config.dns_Retry }}
+                                        {{ config.dns_Expire }}
+                                        {{ config.dns_Minimum }} )
+@       IN              NS      {{ config.dns_ns1 }}.
+@       IN              NS      {{ config.dns_ns2 }}.
+@       IN              MX 10   {{ config.dns_mx }}.
 @       IN              A       {{ domain.owner.parms.web_machine.ip }}
 {% if config.ipv6 %}@       IN              AAAA    {{ domain.owner.parms.web_machine.ipv6 }}{% else %}; No AAAA{% endif %}
 *       IN              CNAME   @
