MySQL host, bind config/zone fixes

--- a/wsgiadmin/requests/templates/bind_zone.conf
+++ b/wsgiadmin/requests/templates/bind_zone.conf
@@ -1,10 +1,10 @@
 $TTL 600s
 @       IN      SOA     {{ config.dns_ns1 }}. {{ config.dns_email }}.  (
                                         {{ domain.serial }}
-                                        {{ config.dns_Refresh }}
-                                        {{ config.dns_Retry }}
-                                        {{ config.dns_Expire }}
-                                        {{ config.dns_Minimum }} )
+                                        {{ config.dns_refresh }}
+                                        {{ config.dns_retry }}
+                                        {{ config.dns_expire }}
+                                        {{ config.dns_minimum }} )
 @       IN              NS      {{ config.dns_ns1 }}.
 @       IN              NS      {{ config.dns_ns2 }}.
 @       IN              MX 10   {{ config.dns_mx }}.
