ifmodule condition for fcgid directive

--- a/wsgiadmin/requests/templates/apache_vhost_static.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_static.conf
@@ -10,5 +10,7 @@
                 Order deny,allow
                 Allow from all
         </Directory>
-        IPCCommTimeout 360
+        <IfModule mod_fcgid.c>
+            IPCCommTimeout 360
+        </IfModule>
 </VirtualHost>
