Zone serial fix - closes #26

--- a/wsgiadmin/requests/templates/bind_zone.conf
+++ b/wsgiadmin/requests/templates/bind_zone.conf
@@ -1,6 +1,6 @@
 $TTL 600s
 @       IN      SOA     {{ config.dns_ns1 }}. {{ config.dns_email }}.  (
-                                        {{ domain.serial }}
+                                        {{ serial }}
                                         {{ config.dns_refresh }}
                                         {{ config.dns_retry }}
                                         {{ config.dns_expire }}
@@ -9,5 +9,5 @@ $TTL 600s
 @       IN              NS      {{ config.dns_ns2 }}.
 @       IN              MX 10   {{ config.dns_mx }}.
 @       IN              A       {{ domain.owner.parms.web_machine.ip }}
-{% if config.ipv6 %}@       IN              AAAA    {{ domain.owner.parms.web_machine.ipv6 }}{% else %}; No AAAA{% endif %}
+{% if config.ipv6 and domain.ipv6 %}@       IN              AAAA    {{ domain.owner.parms.web_machine.ipv6 }}{% else %}; No AAAA{% endif %}
 *       IN              CNAME   @
