--- a/wsgiadmin/requests/templates/apache_vhost_php.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_php.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost {{ listen }}>
         SuexecUserGroup {{ site.owner.username }} {{ site.owner.username }}
         ServerName {{ site.server_name }}
         {% if site.serverAlias %}ServerAlias {{ site.serverAlias }}{% endif %}
