--- a/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost {{ listen }}>
         ServerName {{ site.server_name }}
         {% if site.serverAlias %}ServerAlias {{ site.serverAlias }}{% endif %}
         CustomLog {{ log_dir }}access_{{ site.server_name }}.log combined
