--- a/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
@@ -1,6 +1,6 @@
 server {
-        listen       [::]:88;
-        server_name  {{ site.domains }}
+        listen       {{ config.nginx_listen }};
+        server_name  {{ site.domains }};
 
         access_log {{ log_dir }}access_{{ site.server_name }}.log;
         error_log {{ log_dir }}error_{{ site.server_name }}.log;
