--- a/wsgiadmin/requests/templates/nginx_vhost_static.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_static.conf
@@ -1,5 +1,5 @@
 server {
-        listen       [::]:88;
+        listen       {{ config.nginx_listen }};
         server_name  {{ site.domains }};
 
         access_log {{ log_dir }}access_{{ site.server_name }}.log;
