--- a/wsgiadmin/requests/templates/nginx_vhost_static.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_static.conf
@@ -1,5 +1,13 @@
 server {
+        {% if ssl %}
+        listen               {{ config.nginx_ssl_listen }};
+        ssl                  on;
+        ssl_certificate      {{ site.ssl_crt }};
+        ssl_certificate_key  {{ site.ssl_key }};
+        {% else %}
         listen       {{ config.nginx_listen }};
+        {% endif %}
+
         server_name  {{ site.domains }};
 
         access_log {{ log_dir }}access_{{ site.server_name }}.log;
