Apache and nginx logs separation

--- a/wsgiadmin/requests/templates/nginx_vhost_static.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_static.conf
@@ -13,9 +13,11 @@ server {
         access_log {{ log_dir }}access_{{ site.server_name }}.log;
         error_log {{ log_dir }}error_{{ site.server_name }}.log;
 
-        {% for static in site.static_list %}
-        location / {
-                alias {{ site.document_root }};
-        }
-        {% endfor %}
+        index index.html index.htm default.html default.htm;
+        root {{ site.document_root }};
+        {% if site.indexes %}
+        autoindex on;
+        {% else %}
+        autoindex off;
+        {% endif %}
 }
