app domains as foreign keys (MISSING DATA MIGRATION)

--- a/wsgiadmin/requests/templates/apache_vhost_static.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_static.conf
@@ -1,9 +1,9 @@
 <VirtualHost {{ listen }}>
-        ServerName {{ site.server_name }}
-        {% if site.serverAlias %}ServerAlias {{ site.serverAlias }}{% endif %}
+        ServerName {{ site.main_domain.name }}
+        {% if site.server_aliases %}ServerAlias {{ site.server_aliases }}{% endif %}
         DocumentRoot {{ site.document_root }}
-        CustomLog {{ log_dir }}access_{{ site.server_name }}.log combined
-        ErrorLog {{ log_dir }}error_{{ site.server_name }}.log
+        CustomLog {{ log_dir }}access_{{ site.main_domain.name }}.log combined
+        ErrorLog {{ log_dir }}error_{{ site.main_domain.name }}.log
         <Directory {{ site.document_root }}>
                 Options +Indexes
                 AllowOverride All
