--- a/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/apache_vhost_wsgi.conf
@@ -1,8 +1,8 @@
 <VirtualHost {{ listen }}>
-        ServerName {{ site.server_name }}
-        {% if site.serverAlias %}ServerAlias {{ site.serverAlias }}{% endif %}
-        CustomLog {{ log_dir }}access_{{ site.server_name }}.log combined
-        ErrorLog {{ log_dir }}error_{{ site.server_name }}.log
+        ServerName {{ site.main_domain.name }}
+        {% if site.server_aliases %}ServerAlias {{ site.server_aliases }}{% endif %}
+        CustomLog {{ log_dir }}access_{{ site.main_domain.name }}.log combined
+        ErrorLog {{ log_dir }}error_{{ site.main_domain.name }}.log
 
         {% if site.type == "uwsgi" %}
         <Location />
@@ -11,8 +11,8 @@
                 uWSGISocket {{ site.socket }}
         </Location>
         {% else %}
-        WSGIDaemonProcess {{ site.server_name|slugify }} user={{ site.owner.username }} group={{ site.owner.username }} processes={{ site.processes }} threads={{ site.threads }}
-        WSGIProcessGroup {{ site.server_name|slugify }}
+        WSGIDaemonProcess {{ site.main_domain.name|slugify }} user={{ site.owner.username }} group={{ site.owner.username }} processes={{ site.processes }} threads={{ site.threads }}
+        WSGIProcessGroup {{ site.main_domain.name|slugify }}
         WSGIScriptAlias / {{ site.script }}
         {% endif %}
 
