--- a/wsgiadmin/requests/templates/nginx_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_wsgi.conf
@@ -9,15 +9,15 @@ server {
         {% endif %}
         server_name  {{ site.domains }};
 
-        access_log {{ log_dir }}access_{{ site.server_name }}.log;
-        error_log {{ log_dir }}error_{{ site.server_name }}.log;
+        access_log {{ log_dir }}access_{{ site.main_domain.name }}.log;
+        error_log {{ log_dir }}error_{{ site.main_domain.name }}.log;
 
         location / {
                 uwsgi_pass unix://{{ site.socket }};
                 include        uwsgi_params;
         }
 
-		{% for static in site.static_list %}
+        {% for static in site.static_list %}
         location {{ static.url }} {
                 alias {{ static.dir }};
         }
