--- a/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
@@ -10,8 +10,8 @@ server {
 
         server_name  {{ site.domains }};
 
-        access_log {{ log_dir }}access_{{ site.server_name }}.log;
-        error_log {{ log_dir }}error_{{ site.server_name }}.log;
+        access_log {{ log_dir }}access_{{ site.main_domain.name }}.log;
+        error_log {{ log_dir }}error_{{ site.main_domain.name }}.log;
 
         location / {
                 proxy_pass         http://{{ proxy }}/;
