Save button fix, new domain editor

--- a/wsgiadmin/requests/templates/bind_primary.conf
+++ b/wsgiadmin/requests/templates/bind_primary.conf
@@ -1,7 +1,7 @@
 {% for domain in domains %}
-zone "{{ domain.name }}" IN {
+zone "{{ domain.domain_name }}" IN {
         type master;
-        file "pri_auto/{{ domain.name }}.zone";
+        file "pri_auto/{{ domain.domain_name }}.zone";
         allow-query { any; };
         allow-transfer { {{ config.dns_slave }}; };
         notify yes;
