--- a/wsgiadmin/requests/templates/bind_secondary.conf
+++ b/wsgiadmin/requests/templates/bind_secondary.conf
@@ -1,7 +1,7 @@
 {% for domain in domains %}
-zone "{{ domain.name }}" IN {
+zone "{{ domain.domain_name }}" IN {
         type slave;
-        file "sec_auto/{{ domain.name }}.zone";
+        file "sec_auto/{{ domain.domain_name }}.zone";
         allow-query { any; };
         masters { {{ config.dns_master }}; };
 };
