--- a/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
@@ -10,26 +10,12 @@ server {
 
         server_name  {{ site.domains }};
 
-        access_log {{ log_dir }}access_{{ site.main_domain.name }}.log;
-        error_log {{ log_dir }}error_{{ site.main_domain.name }}.log;
+        access_log {{ log_dir }}access_{{ site.main_domain.domain_name }}.log;
+        error_log {{ log_dir }}error_{{ site.main_domain.domain_name }}.log;
 
         location / {
                 proxy_pass         http://{{ proxy }}/;
                 proxy_redirect     off;
-
-                proxy_set_header   Host             $host;
-                proxy_set_header   X-Real-IP        $remote_addr;
-                proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-                proxy_max_temp_file_size 0;
-
-                proxy_connect_timeout      90;
-                proxy_send_timeout         90;
-                proxy_read_timeout         90;
-
-                proxy_buffer_size          4k;
-                proxy_buffers              4 32k;
-                proxy_busy_buffers_size    64k;
-                proxy_temp_file_write_size 64k;
         }
         {% for static in site.static_list %}
         location {{ static.url }} {
