--- a/wsgiadmin/requests/templates/nginx_vhost_wsgi.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_wsgi.conf
@@ -9,8 +9,8 @@ server {
         {% endif %}
         server_name  {{ site.domains }};
 
-        access_log {{ log_dir }}access_{{ site.main_domain.name }}.log;
-        error_log {{ log_dir }}error_{{ site.main_domain.name }}.log;
+        access_log {{ log_dir }}access_{{ site.main_domain.domain_name }}.log;
+        error_log {{ log_dir }}error_{{ site.main_domain.domain_name }}.log;
 
         location / {
                 uwsgi_pass unix://{{ site.socket }};
