--- a/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
+++ b/wsgiadmin/requests/templates/nginx_vhost_proxy.conf
@@ -16,6 +16,8 @@ server {
         location / {
                 proxy_pass         http://{{ proxy }}/;
                 proxy_redirect     off;
+                #proxy_set_header X-Protocol $server_protocol;
+                #proxy_set_header X-URI $request_uri;
         }
         {% for static in site.static_list %}
         location {{ static.url }} {
