--- a/wsgiadmin/old/requests/templates/nginx_vhost_proxy.conf
+++ b/wsgiadmin/old/requests/templates/nginx_vhost_proxy.conf
@@ -1,11 +1,11 @@
 server {
         {% if ssl %}
-        listen               {{ config.nginx_ssl_listen }};
+        listen               [::]:443;
         ssl                  on;
         ssl_certificate      {{ site.ssl_crt }};
         ssl_certificate_key  {{ site.ssl_key }};
         {% else %}
-        listen       {{ config.nginx_listen }};
+        listen       [::]:80;
         {% endif %}
 
         server_name  {{ site.domains }};
